@@ -238,17 +238,17 @@ UPDATE static_countries SET cn_short_es='Sudáfrica' WHERE cn_iso_2='ZA';
 UPDATE static_countries SET cn_short_es='Zambia' WHERE cn_iso_2='ZM';
 UPDATE static_countries SET cn_short_es='Zimbabue' WHERE cn_iso_2='ZW';
 UPDATE static_countries SET cn_short_es='Territorios Palestinos' WHERE cn_iso_2='PS';
-UPDATE static_countries SET cn_short_es='' WHERE cn_iso_2='CS';
-UPDATE static_countries SET cn_short_es='Åland' WHERE cn_iso_2='AX';
+UPDATE static_countries SET cn_short_es='Serbia y Montenegro' WHERE cn_iso_2='CS';
+UPDATE static_countries SET cn_short_es='Las islas de Åland' WHERE cn_iso_2='AX';
 UPDATE static_countries SET cn_short_es='Islas Heard y McDonald' WHERE cn_iso_2='HM';
 UPDATE static_countries SET cn_short_es='Montenegro' WHERE cn_iso_2='ME';
 UPDATE static_countries SET cn_short_es='Serbia' WHERE cn_iso_2='RS';
 UPDATE static_countries SET cn_short_es='Jersey' WHERE cn_iso_2='JE';
-UPDATE static_countries SET cn_short_es='Guernsey' WHERE cn_iso_2='GG';
+UPDATE static_countries SET cn_short_es='Guernesey' WHERE cn_iso_2='GG';
 UPDATE static_countries SET cn_short_es='Isla de Man' WHERE cn_iso_2='IM';
 UPDATE static_countries SET cn_short_es='San Martín' WHERE cn_iso_2='MF';
 UPDATE static_countries SET cn_short_es='San Bartolomé' WHERE cn_iso_2='BL';
-UPDATE static_countries SET cn_short_es='Caribe Neerlandés' WHERE cn_iso_2='BQ';
+UPDATE static_countries SET cn_short_es='Bonaire, San Eustaquio y Saba' WHERE cn_iso_2='BQ';
 UPDATE static_countries SET cn_short_es='Curazao' WHERE cn_iso_2='CW';
 UPDATE static_countries SET cn_short_es='Sint Maarten' WHERE cn_iso_2='SX';
 UPDATE static_countries SET cn_short_es='Sudán del Sur' WHERE cn_iso_2='SS';
@@ -303,7 +303,7 @@ UPDATE static_currencies SET cu_name_es='dólar de las Islas Fiyi',cu_sub_name_e
 UPDATE static_currencies SET cu_name_es='libra de las Islas Malvinas',cu_sub_name_es='' WHERE cu_iso_3='FKP';
 UPDATE static_currencies SET cu_name_es='libra esterlina británica',cu_sub_name_es='' WHERE cu_iso_3='GBP';
 UPDATE static_currencies SET cu_name_es='lari georgiano',cu_sub_name_es='' WHERE cu_iso_3='GEL';
-UPDATE static_currencies SET cu_name_es='',cu_sub_name_es='' WHERE cu_iso_3='GHC';
+UPDATE static_currencies SET cu_name_es='cedi ghanés',cu_sub_name_es='' WHERE cu_iso_3='GHC';
 UPDATE static_currencies SET cu_name_es='libra de Gibraltar',cu_sub_name_es='' WHERE cu_iso_3='GIP';
 UPDATE static_currencies SET cu_name_es='dalasi gambiano',cu_sub_name_es='' WHERE cu_iso_3='GMD';
 UPDATE static_currencies SET cu_name_es='franco guineo',cu_sub_name_es='' WHERE cu_iso_3='GNF';
@@ -354,7 +354,7 @@ UPDATE static_currencies SET cu_name_es='rufiyaa de Maldivas',cu_sub_name_es='' 
 UPDATE static_currencies SET cu_name_es='kwacha de Malawi',cu_sub_name_es='' WHERE cu_iso_3='MWK';
 UPDATE static_currencies SET cu_name_es='peso mexicano',cu_sub_name_es='' WHERE cu_iso_3='MXN';
 UPDATE static_currencies SET cu_name_es='ringgit malasio',cu_sub_name_es='' WHERE cu_iso_3='MYR';
-UPDATE static_currencies SET cu_name_es='',cu_sub_name_es='' WHERE cu_iso_3='MZM';
+UPDATE static_currencies SET cu_name_es='metical mozambiqueño',cu_sub_name_es='' WHERE cu_iso_3='MZM';
 UPDATE static_currencies SET cu_name_es='dólar de Namibia',cu_sub_name_es='' WHERE cu_iso_3='NAD';
 UPDATE static_currencies SET cu_name_es='naira nigeriano',cu_sub_name_es='' WHERE cu_iso_3='NGN';
 UPDATE static_currencies SET cu_name_es='córdoba oro nicaragüense',cu_sub_name_es='' WHERE cu_iso_3='NIO';
@@ -370,7 +370,7 @@ UPDATE static_currencies SET cu_name_es='rupia pakistaní',cu_sub_name_es='' WHE
 UPDATE static_currencies SET cu_name_es='zloty polaco',cu_sub_name_es='' WHERE cu_iso_3='PLN';
 UPDATE static_currencies SET cu_name_es='guaraní paraguayo',cu_sub_name_es='' WHERE cu_iso_3='PYG';
 UPDATE static_currencies SET cu_name_es='riyal de Qatar',cu_sub_name_es='' WHERE cu_iso_3='QAR';
-UPDATE static_currencies SET cu_name_es='',cu_sub_name_es='' WHERE cu_iso_3='ROL';
+UPDATE static_currencies SET cu_name_es='leu rumano',cu_sub_name_es='' WHERE cu_iso_3='ROL';
 UPDATE static_currencies SET cu_name_es='rublo ruso',cu_sub_name_es='' WHERE cu_iso_3='RUB';
 UPDATE static_currencies SET cu_name_es='franco ruandés',cu_sub_name_es='' WHERE cu_iso_3='RWF';
 UPDATE static_currencies SET cu_name_es='riyal saudí',cu_sub_name_es='' WHERE cu_iso_3='SAR';
@@ -390,7 +390,7 @@ UPDATE static_currencies SET cu_name_es='libra siria',cu_sub_name_es='' WHERE cu
 UPDATE static_currencies SET cu_name_es='lilangeni suazi',cu_sub_name_es='' WHERE cu_iso_3='SZL';
 UPDATE static_currencies SET cu_name_es='baht tailandés',cu_sub_name_es='' WHERE cu_iso_3='THB';
 UPDATE static_currencies SET cu_name_es='somoni tayiko',cu_sub_name_es='' WHERE cu_iso_3='TJS';
-UPDATE static_currencies SET cu_name_es='',cu_sub_name_es='' WHERE cu_iso_3='TMM';
+UPDATE static_currencies SET cu_name_es='manat turcomano',cu_sub_name_es='' WHERE cu_iso_3='TMM';
 UPDATE static_currencies SET cu_name_es='dinar tunecino',cu_sub_name_es='' WHERE cu_iso_3='TND';
 UPDATE static_currencies SET cu_name_es='paʻanga tongano',cu_sub_name_es='' WHERE cu_iso_3='TOP';
 UPDATE static_currencies SET cu_name_es='dólar de Trinidad y Tobago',cu_sub_name_es='' WHERE cu_iso_3='TTD';
